added benchmark results

--- a/analysis_tool_versions.yaml
+++ b/analysis_tool_versions.yaml
@@ -1,4 +1,5 @@
-Nanoplot: 1.10.5
-Quast: 4.6.3, 1f2766b
-Jellyfish: 2.2.7
-Minimap2: 2.9-r720
+Mappy: 2.10
+Nanoplot: 1.13.0
+Quast: 4.6.3
+Jellyfish: 2.2.6
+Jellyfish: 2.2.6
