--- a/readset_analysis/alignment_stats.yaml
+++ b/readset_analysis/alignment_stats.yaml
@@ -1,5 +1,11 @@
-matches: 5958
-mismatches: 872
-insertions: 258
-deletions: 910
-
+deletions: 11982
+insertions: 8100
+mapping_quality: [60, 60, 60, 19, 60, 1, 53, 19, 3, 1, 28, 32, 18, 60, 60, 22, 2,
+  21, 12, 60, 60, 1, 2, 11, 13, 7, 60, 29, 60, 60, 60, 60, 20, 60, 39, 60, 7, 60,
+  18, 8, 35, 1, 25, 8, 22, 5, 52, 4, 24, 60, 60, 26, 13, 10, 37, 1, 16, 60, 60, 1,
+  60, 60, 60, 6, 60, 18, 0, 25, 2, 60, 19, 60, 3, 60, 1, 60, 39, 2, 1, 1, 1, 3, 60,
+  34, 60, 39, 4, 1, 21]
+matches: 167884
+mismatches: 10580
+nb_mappings: [1, 3, 5, 9, 1, 6, 9, 2, 2, 1, 3, 3, 3, 10, 5, 8, 1, 8, 2, 1, 2, 1, 6,
+  5, 2, 2, 2, 5, 5, 11]
